# tandon-ai-doc-intel

./: README.md  app.py  dash_app.py  dash_app_retrieval_callback.py  debug_app.py  example_usage.py  gradio_app.py  pyproject.toml
examples/: 01_pipeline_demo.ipynb  02_hybrid_search_experiment.ipynb  create_notebook.py
scripts/: run_benchmarks.py
src/tandon_ai_doc_intel/: __init__.py  analytics.py  classification.py  config.py  evaluation.py  exceptions.py  ingestion.py  metrics.py  models.py  pipeline.py  validation.py
src/tandon_ai_doc_intel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tandon_ai_doc_intel/embeddings/: __init__.py  provider.py  store.py
src/tandon_ai_doc_intel/enrichment/: __init__.py  llm.py
src/tandon_ai_doc_intel/extraction/: __init__.py  base.py  digital.py  scanned.py
tests/: test_pipeline.py
